Fix overflow side effect

--- a/src/scss/snippet.scss
+++ b/src/scss/snippet.scss
@@ -213,6 +213,7 @@
                     border-left: unset;
                     padding-left: 0;
                     border: 0.07rem solid $table-border;
+                    overflow-y: hidden;
                     @media screen and (min-width: 320px) {
                         overflow-x: auto;
                         .rem-text {
